--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "moment": "^2.29.1",
+    "moment-precise-range-plugin": "^1.3.0",
     "swiper": "^6.7.5"
   }
 }
